tests/errors/sem_test4.py
# sem_test4.py
def main():
    x = "hello"
    y = 5
    z = x / y
    print(z)

main()
